--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <h1> UITS Online Resources</h1>
-<p><small>First try on the web version of the Online Resources thingy. <br>This is just the first action to promote further action towards the same action.</small></p>
+<p><small>First try on the web version of the Online Resources thingy. <br>This is just the first action to promote further action towards the same action (kinda crazy to think about).</small> Note that I will be primarily working on https://b1tranger.github.io/UITS-Resources/</p>
 <!-- Everything here needs to be links-->
 <br><br>
 <h3>Primary Directories?</h3>
