--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </ol>
 <h3> Highlights? </h3>
 <ol>
-  <li><a href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC">CSE Files</a></li>
+  <li><a href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
   <li><a href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
   <li><a href ="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">Routine Format</a></li>
   <li><a href ="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">Curated Book List</a></li>
