--- a/index.html
+++ b/index.html
@@ -33,28 +33,14 @@
 <br><br><br><br><br>
 <small><i><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</i></small></a>
 
+    <br><br>
+
+<hr><br><br>
+    <a href ="https://forms.gle/WE3uazPGvsL1Exdg8">Click Here to add note</a>
+    <br><br><br>
+    <a href ="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=drivesdk">Click Here to add note</a>
 
 
-
-
-
-
-
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<hr>
-<h6> (temp area) </h6>
-<form action="/action_page.php" method="get">
-  <label for="browser">Choose Primary Directory: </label>
-  <input list="browsers" name="browser" id="browser">
-  <datalist id="browsers">
-    <option value="Edge"> <a href ="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD"><i>Info-Guides</i></a>
-    <option value="Firefox">
-    <option value="Chrome">
-    <option value="Opera">
-    <option value="Safari">
-  </datalist>
-  <input type="submit">
-</form>
+<br>
 </body>
 </html>
