--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <hr><br><br>
     <a href ="https://forms.gle/WE3uazPGvsL1Exdg8">Click Here to add note</a>
     <br><br><br>
-    <a href ="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=drivesdk">Click Here to add note</a>
+    <a href ="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=drivesdk">Click Here see note</a>
 
 
 <br>
