--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
 <br><br><br><br><br>
 <small><i><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</i></small></a>
 
-    <br><br>
+    <br><br><br><br><br><br><br>
 
-<hr><br><br>
-    <a href ="https://forms.gle/WE3uazPGvsL1Exdg8">Click Here to add note</a>
+<hr><br><br><br><br><br><br><br>
+<h6> (add anon note here) </h6>
+    <a href ="https://forms.gle/WE3uazPGvsL1Exdg8"target="_blank">Click Here to add note</a>
     <br><br><br>
-    <a href ="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=drivesdk">Click Here see note</a>
+    <a href ="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=drivesdk"target="_blank">Click Here see note</a>
 
 
 <br>
