--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
     <br><br><br><br><br><br><br>
 
-<hr><br><br><br><br><br><br><br>
+<hr><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <h6> (add anon note here) </h6>
     <a href ="https://forms.gle/WE3uazPGvsL1Exdg8"target="_blank">Click Here to add note</a>
     <br><br><br>
-    <a href ="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=drivesdk"target="_blank">Click Here see note</a>
+    <a href ="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=drivesdk"target="_blank">Click Here to see note</a>
 
 
 <br>
