--- a/index.html
+++ b/index.html
@@ -1,47 +1,62 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-<title>
+<title >
   UITS Online Resources
 </title>
 </head>
-<body>
+ <!-- 
 
-<h1> UITS Online Resources</h1>
-<p><small>First try on the web version of the Online Resources thingy. <br>This is just the first action to promote further action towards the same action (kinda crazy to think about).<br>Note that I will be primarily working on <a href ="https://b1tranger.github.io/UITS-Resources/" target="_blank">GitHub's Hosting</a></small></p>
+ style="color:rgba(0, 0, 0, 0.249);"
+  
+ 
+ 
+ 
+ -->
+<body style="background-color:rgba(5, 240, 1, 0.051);">
+
+<h1 align = center> UITS Online Resources</h1>
+<p align = center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the Online Resources thingy. <br>This is just the first action to promote further action towards the same action <br>(kinda crazy to think about).<br>Note that I will be primarily working on <a href ="https://b1tranger.github.io/UITS-Resources/" target="_blank" style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a></small></p><br><br>
+<hr>
 <!-- Everything here needs to be links-->
-<br><br>
-<h3>Primary Directories?</h3>
-<ol>
+
+<br>
+<h3 align = center>Primary Directories?</h3>
+
+<ul style="color:rgba(0, 0, 0, 0.249);"><i>
     <li><a href ="https://drive.google.com/drive/folders/1oMbT_6PIS8cEnTdRXuue9-KccctiFJZA" target="_blank">Info-Guides</a></li>
-    <li><a href ="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD" target="_blank">UITS Questions</a></li>
-    <li><a href ="https://drive.google.com/drive/folders/1n29sfMaCF_S4ffbjudBBSGBd6Q7l3Sqp" target="_blank">Departments</a></li>
-    <li><a href ="https://drive.google.com/drive/folders/1htCYkklo4zgP16a3Ailmo6hk9pAi8Psm" target="_blank">Elective Courses</a></li>
-    <li><a href ="https://drive.google.com/drive/folders/1hTWa-Z7gV3GaUUMJhT2KPasmq5L1ha3p" target="_blank">Skills Dev Resources</a></li>
-</ol>
-<h3> Highlights? </h3>
-<ol>
+    <br><li><a href ="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD" target="_blank">UITS Questions</a></li>
+    <br><li><a href ="https://drive.google.com/drive/folders/1n29sfMaCF_S4ffbjudBBSGBd6Q7l3Sqp" target="_blank">Departments</a></li>
+    <br><li><a href ="https://drive.google.com/drive/folders/1htCYkklo4zgP16a3Ailmo6hk9pAi8Psm" target="_blank">Elective Courses</a></li>
+    <br><li><a href ="https://drive.google.com/drive/folders/1hTWa-Z7gV3GaUUMJhT2KPasmq5L1ha3p" target="_blank">Skills Dev Resources</a></li></i>
+</ul>
+<h3 align = center> Highlights? </h3>
+<ul style="color:rgba(0, 0, 0, 0.249);"><i>
   <li><a href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
-  <li><a href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
-  <li><a href ="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">Routine Format</a></li>
-  <li><a href ="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">Curated Book List</a></li>
-  <li><a href ="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">Programming References</a></li>
-</ol>
+  <br><li><a href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
+  <br><li><a href ="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">Routine Format</a></li>
+  <br><li><a href ="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">Curated Book List</a></li>
+  <br><li><a href ="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">Programming References</a></li>
+</i></ul>
 
 
 
 <br><br><br><br><br>
-<small><i><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</i></small></a>
+<p align = right><small><i><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</i></small></a></p>
 
     <br><br><br><br><br><br><br>
 
-<hr><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<h6> (add anon note here) </h6>
-    <a href ="https://forms.gle/WE3uazPGvsL1Exdg8"target="_blank">Click Here to add note</a>
-    <br><br><br>
-    <a href ="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=drivesdk"target="_blank">Click Here to see note</a>
+<hr><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<h6 align = center  style="color:rgba(153, 150, 150, 0.993);"><i> (add anon note here)</i> </h6>
+<p align = center>
+    <a href ="https://forms.gle/WE3uazPGvsL1Exdg8"target="_blank"  style="color:rgba(0, 0, 0, 0.519);">Click Here to add note</a>
+    <br><br>
+    <a href  ="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=drivesdk" target="_blank" style="color:rgba(0, 0, 0, 0.519);">Click Here to see note</a>
 
 
-<br>
+<br></p>
+
+<br><br><br><br><br><br><br>
 </body>
 </html>
