--- a/index.html
+++ b/index.html
@@ -13,24 +13,31 @@
  
  
  -->
-<body style="background-color:rgba(5, 240, 1, 0.051);">
-
+<body style="background-color:rgba(5, 240, 1, 0.051);" padding: 20px>
+ <br><br><br>
 <h1 align = center> UITS Online Resources</h1>
+
 <p align = center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the Online Resources thingy. <br>This is just the first action to promote further action towards the same action <br>(kinda crazy to think about).<br>Note that I will be primarily working on <a href ="https://b1tranger.github.io/UITS-Resources/" target="_blank" style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a></small></p><br><br>
 <hr>
 <!-- Everything here needs to be links-->
 
 <br>
 <h3 align = center>Primary Directories?</h3>
-
+<table align = center>
+<tr><th><td style="color:rgba(0, 0, 0, 0);">------------------tmp------------------</td></th><th><td>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
     <li><a href ="https://drive.google.com/drive/folders/1oMbT_6PIS8cEnTdRXuue9-KccctiFJZA" target="_blank">Info-Guides</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD" target="_blank">UITS Questions</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/1n29sfMaCF_S4ffbjudBBSGBd6Q7l3Sqp" target="_blank">Departments</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/1htCYkklo4zgP16a3Ailmo6hk9pAi8Psm" target="_blank">Elective Courses</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/1hTWa-Z7gV3GaUUMJhT2KPasmq5L1ha3p" target="_blank">Skills Dev Resources</a></li></i>
-</ul><br><br><br>
+</ul></td>
+</th><th><td style="color:rgba(0, 0, 0, 0);">------------------tmp------------------</td></th></tr></table>
+
+<br><br><br>
 <h3 align = center> Highlights? </h3>
+<table align = center>
+  <tr><th><td style="color:rgba(0, 0, 0, 0);">------------------tmp------------------</td></th><th><td>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
   <li><a href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
   <br><li><a href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
@@ -38,11 +45,19 @@
   <br><li><a href ="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">Curated Book List</a></li>
   <br><li><a href ="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">Programming References</a></li>
 </i></ul>
+</td>
+</th><th><td style="color:rgba(0, 0, 0, 0);">------------------tmp------------------</td></th></tr></table>
 
 
 
 <br><br><br><br><br>
-<p align = right><small><i><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</i></small></a></p>
+<table align = center>
+  <tr>
+    <th><td style="color:rgba(0, 0, 0, 0);">------------------tmp------------------</td></th>
+    <th><td style="color:rgba(0, 0, 0, 0);">------------------tmp------------------</td></th>
+    <th><td><p align = right><small><i><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</i></small></a></p></td></th>
+    </th>
+</table>
 
     <br><br><br><br><br><br><br>
 
