--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <br>
 <h3 align = center>Primary Directories?</h3>
 <table align = center>
-<tr><th><td style="color:rgba(0, 0, 0, 0);">------------------tmp------------------</td></th><th><td>
+<tr><th><td>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
     <li><a href ="https://drive.google.com/drive/folders/1oMbT_6PIS8cEnTdRXuue9-KccctiFJZA" target="_blank">Info-Guides</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD" target="_blank">UITS Questions</a></li>
@@ -32,12 +32,12 @@
     <br><li><a href ="https://drive.google.com/drive/folders/1htCYkklo4zgP16a3Ailmo6hk9pAi8Psm" target="_blank">Elective Courses</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/1hTWa-Z7gV3GaUUMJhT2KPasmq5L1ha3p" target="_blank">Skills Dev Resources</a></li></i>
 </ul></td>
-</th><th><td style="color:rgba(0, 0, 0, 0);">------------------tmp------------------</td></th></tr></table>
+</tr></table>
 
 <br><br><br>
 <h3 align = center> Highlights? </h3>
 <table align = center>
-  <tr><th><td style="color:rgba(0, 0, 0, 0);">------------------tmp------------------</td></th><th><td>
+  <tr><th><td>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
   <li><a href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
   <br><li><a href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
@@ -46,16 +46,14 @@
   <br><li><a href ="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">Programming References</a></li>
 </i></ul>
 </td>
-</th><th><td style="color:rgba(0, 0, 0, 0);">------------------tmp------------------</td></th></tr></table>
+</th></tr></table>
 
 
 
 <br><br><br><br><br>
-<table align = center>
+<table align = right width: 50%;>
   <tr>
-    <th><td style="color:rgba(0, 0, 0, 0);">------------------tmp------------------</td></th>
-    <th><td style="color:rgba(0, 0, 0, 0);">------------------tmp------------------</td></th>
-    <th><td><p align = right><small><i><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</i></small></a></p></td></th>
+    <th><td><p><small><i><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</i></small></a></p></td></th>
     </th>
 </table>
 
