--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  
  
  -->
-<body style="background-color:rgba(5, 240, 1, 0.051);" padding: 20px>
+<body style="background-color:rgba(5, 240, 1, 0.051);">
  <br><br><br>
 <h1 align = center> UITS Online Resources</h1>
 
@@ -32,7 +32,8 @@
     <br><li><a href ="https://drive.google.com/drive/folders/1htCYkklo4zgP16a3Ailmo6hk9pAi8Psm" target="_blank">Elective Courses</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/1hTWa-Z7gV3GaUUMJhT2KPasmq5L1ha3p" target="_blank">Skills Dev Resources</a></li></i>
 </ul></td>
-</tr></table>
+</tr>
+</table>
 
 <br><br><br>
 <h3 align = center> Highlights? </h3>
@@ -51,7 +52,7 @@
 
 
 <br><br><br><br><br>
-<table align = right width: 50%;>
+<table align = right>
   <tr>
     <th><td><p><small><i><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</i></small></a></p></td></th>
     </th>
