--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
 
 
 <br><br><br><br><br>
-<table align = right>
-  <tr>
-    <th><td><p><small><i><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</i></small></a></p></td></th>
-    </th>
-</table>
+
+<p align = right><small><i><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</i></small></a></p>
+  
 
     <br><br><br><br><br><br><br>
 
