--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <br>
 <h3 align = center>Primary Directories?</h3>
 <br>
-<table align = center style="width:50%"><tr><th><td>
+<table style="width:50%"><tr><th><td>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
     <li><a href ="https://drive.google.com/drive/folders/1oMbT_6PIS8cEnTdRXuue9-KccctiFJZA" target="_blank">Info-Guides</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD" target="_blank">UITS Questions</a></li>
@@ -37,7 +37,7 @@
 <br><br><br>
 <h3 align = center> Highlights? </h3>
 <br>
-<table align = center style="width:50%"><tr><th><td>
+<table style="width:50%"><tr><th><td>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
   <li><a href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
   <br><li><a href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
