--- a/index.html
+++ b/index.html
@@ -49,7 +49,18 @@
 <p align = right><small><i><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</i></small></a></p>
   
 
-    <br><br><br><br><br><br><br>
+    <br><br><br>
+
+<h3 align = center> Socials? </h3>
+<br>
+<ul style="color:rgba(0, 0, 0, 0.249);"><i>
+  <li><a href ="https://facebook.com/groups/1074592960836263/" target="_blank">Facebook Group (UITS - Online Resources)</a></li>
+  <br><li><a href ="https://t.me/UITS_ORnU" target="_blank">Telegram Channel (UITS - Online Resources and Updates)</a></li>
+<br>
+</i></ul>
+
+
+<br><br><br><br>
 
 <hr><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
