--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
 <h3 align = center> Socials? </h3>
 <br>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
-  <li><a href ="https://facebook.com/groups/1074592960836263/" target="_blank">Facebook Group (UITS - Online Resources)</a></li>
-  <br><li><a href ="https://t.me/UITS_ORnU" target="_blank">Telegram Channel (UITS - Online Resources and Updates)</a></li>
-<br>
+  <li><a href ="https://discord.gg/weetUpfS5X" target="_blank">Discord Server (Protein Shake)/a></li>
+<li><a href ="https://t.me/UITS_ORnU" target="_blank">Telegram Channel (UITS - Online Resources and Updates)</a></li>
+<li><a href ="https://facebook.com/groups/1074592960836263/" target="_blank">Facebook Group (UITS - Online Resources)</a></li>
+  <br>
 </i></ul>
 
 
