--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 <h3 align = center> Socials? </h3>
 <br>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
-  <li><a href ="https://discord.gg/weetUpfS5X" target="_blank">Discord Server (Protein Shake)/a></li>
+  <li><a href ="https://discord.gg/weetUpfS5X" target="_blank">Discord Server (Protein Shake)</a></li>
 <br>
 <li><a href ="https://t.me/UITS_ORnU" target="_blank">Telegram Channel (UITS - Online Resources and Updates)</a></li>
-<br><li><a href ="https://facebook.com/groups/1074592960836263/" target="_blank">Facebook Group (UITS - Online Resources)</a></li>
+<br><li><a href ="https://facebook.com/groups/1074592960836263/" target="_blank">Facebook Group (UITS - Online Resources) </a></li>
   <br>
 </i></ul>
 
@@ -72,10 +72,17 @@
     <a href ="https://forms.gle/WE3uazPGvsL1Exdg8"target="_blank"  style="color:rgba(0, 0, 0, 0.519);">Click Here to add note</a>
     <br><br>
     <a href  ="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=drivesdk" target="_blank" style="color:rgba(0, 0, 0, 0.519);">Click Here to see note</a>
+<br>
+</p>
+
+<
+
+br><br><br><br><br>
+
+<p align = right><small>Please be mindful of possible Legal issues<br>(like Copyright materials) </small></a></p>
 
 
-<br></p>
+<br><br>
 
-<br><br><br><br><br><br><br>
 </body>
 </html>
