--- a/index.html
+++ b/index.html
@@ -75,11 +75,9 @@
 <br>
 </p>
 
-<
+<br><br><br><br><br>
 
-br><br><br><br><br>
-
-<p align = right><small>Please be mindful of possible Legal issues<br>(like Copyright materials) </small></a></p>
+<p align = center><small>Please be mindful of possible Legal issues<br>(like Copyright materials) </small></a></p>
 
 
 <br><br>
