--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <p align = center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the Online Resources thingy. <br>This is just the first action to promote further action towards the same action <br>(kinda crazy to think about).<br>Note that I will be primarily working on <a href ="https://b1tranger.github.io/UITS-Resources/" target="_blank" style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a></small></p><br><br>
 <hr>
-<!-- Everything here needs to be links-->
+<!-- Everything from here needs to be links-->
 
 <br>
 <h3 align = center>Primary Directories?</h3>
@@ -60,6 +60,17 @@
 <li><a href ="https://t.me/UITS_ORnU" target="_blank">Telegram Channel (UITS - Online Resources and Updates)</a></li>
 <br><li><a href ="https://facebook.com/groups/1074592960836263/" target="_blank">Facebook Group (UITS - Online Resources) </a></li>
   <br>
+</i></ul>
+
+<br><br><br>
+<hr>
+    <br><br><br>
+
+<h3 align = center> Similar Projects !!</h3>
+<br>
+<ul style="color:rgba(0, 0, 0, 0.249);"><i>
+  <li><a href ="akibreza.github.io/uitsBOT" target="_blank">uitsBOT by Akib Reza (432220005101061)</a></li>
+
 </i></ul>
 
 
