--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <br><br><br>
 
 <h3 align = center> Similar Projects !!</h3>
+<p align = right><small><i>(for references)</i></small></a></p>
+
 <br>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
   <li><a href ="akibreza.github.io/uitsBOT" target="_blank">uitsBOT by Akib Reza (432220005101061)</a></li>
