--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <br>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
-  <li><a href ="akibreza.github.io/uitsBOT/" target="_blank">uitsBOT by Akib Reza (432220005101061)</a></li>
+  <li><a href ="http://akibreza.github.io/uitsBOT" target="_blank">uitsBOT by Akib Reza (432220005101061)</a></li>
 
 </i></ul>
 
