--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <br><br><br>
 
 <h3 align = center> Similar Projects !!</h3>
-<p align = right><small><i>(for references)</i></small></a></p>
+<p align = center><small><i>(for references)</i></small></a></p>
 
 <br>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
