--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
  -->
 <body style="background-color:rgba(5, 240, 1, 0.051);">
  <br><br><br>
+  <h1 align = center> 
+    These are Relative URLs
+</h1>
+<a href =lab3-1-img.html target="_blank">Load Image</a>
+<br>
+<a href =lab3-2-anchor.html>Load Anchor</a>
+<br>
+<a href =lab3-3-lorep-ipsum.html>Load Lorem Ipsum</a>
+<br><br><hr>,br><br>
 <h1 align = center> UITS Online Resources</h1>
 
 <p align = center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the Online Resources thingy. <br>This is just the first action to promote further action towards the same action <br>(kinda crazy to think about).<br>Note that I will be primarily working on <a href ="https://b1tranger.github.io/UITS-Resources/" target="_blank" style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a></small></p><br><br>
