--- a/index.html
+++ b/index.html
@@ -71,11 +71,14 @@
     These are Relative URLs
 </p>
 <a href =lab3-1-img.html target="_blank">Load Image</a>
-<br>
+<br><br>
 <a href =lab3-2-anchor.html>Load Anchor</a>
-<br>
+<br><br>
 <a href =lab3-3-lorep-ipsum.html>Load Lorem Ipsum</a>
-<br><br><hr><br><br>
+<br><br>
+<a href =lab3-task-1-UITS.html>Go to Task 1 (Create UITS links)</a>
+<br><br>
+<br><br>><br><br>
 <hr>
 <div class="sidenav">
   <a href="#about">About</a>
