--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <br><br><br><br>
   <hr>
   <p> (This is Temporary section)</p>
-   <p align = center> 
+   <p id="URL-1" align = center> 
     These are Relative URLs
 </p>
 <a href =lab3-1-img.html target="_blank">Load Image</a>
