--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
 <br><br><br><br>
   <hr>
-  <p> (This is Temporary section)</p>
-   <p id="URL-1" align = center> 
+  <p id="URL-1"> (This is Temporary section)</p>
+   <p align = center> 
     These are Relative URLs
 </p>
 <a href =lab3-1-img.html target="_blank">Load Image</a>
