--- a/lab3-2-anchor.html
+++ b/lab3-2-anchor.html
@@ -9,7 +9,7 @@
  <p><a href= "https://codeforces.com/"><img src = codeforces-sponsored-by-ton.png alt = "CodeForces" width=555 height=130></a></p>
  <br>
 <br>
-<a href =index.html>Go back</a>
+<a href =index.html/"#URL-1">Go back</a>
 </body>
 
 </html>
