--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 
 <br><br><br><br>
   <hr>
-  <p id="URL-1"> (This is Temporary section)</p>
+  <p id="URL-1"> (This is Temporary section)</p><br><br>
+  <iframe src="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank" title="Shortcut to UITS Resoruces"></iframe><br><br>
    <p align = center> 
     These are Relative URLs
 </p>
