--- a/wip.html
+++ b/wip.html
@@ -6,31 +6,29 @@
 </title>
 </head>
 <body>
-<h1 align = center> 
-    This is an image
-</h1>
-<p><img src=github-img.png alt="this is an alt text" width="=200" height="200"></p>
-<p><img alt="this is an alt text" width="=100" height="100"></p>
-<br>
-<br>
-<a href =index.html >Go back</a>
+<h1 id="top" align = center> 
+    (wip page)</h1>
+<p align=center><a href =index.html >Go back</a></p>
+<p align=center><a href ="#end" >Go to end</a></p>
 
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <hr>
-  <p id="URL-1"> (This is Temporary section)</p><br><br>
-  <iframe src="https://drive.google.com/drive/mobile/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank" width=400 height=400 title="Shortcut to UITS Resources"></iframe><br><br>
-   <p align = center> 
+<br><br>
+<p align = center> 
     These are Relative URLs
 </p>
-<a href =lab3-1-img.html target="_blank">Load Image</a>
+<a href =temp-page-01.html>Load page 01 (image tag)</a>
 <br><br>
-<a href =lab3-2-anchor.html>Load Anchor</a>
+<a href =temp-page-02.html>Load page 02 (anchor tag)</a>
 <br><br>
 <a href =lab3-3-lorep-ipsum.html>Load Lorem Ipsum</a>
 <br><br>
 <a href =lab3-task-1-UITS.html>Go to Task 1 (Create UITS links)</a>
 <br><br>
+<br><br><br><br>
+  <hr>
+  <p id="URL-1"> (This is an iframe, which unfortunately is not working)</p><br><br>
+  <iframe src="https://drive.google.com/drive/mobile/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank" width=400 height=400 title="Shortcut to UITS Resources"></iframe><br><br>
+   
 <br><br><br><br>
 <hr>
 <div class="sidenav">
@@ -50,6 +48,11 @@
 </div>
 <br><br><br><br>
 
+
+
+<p id="end" align="center">end</p>
+<p align=center><a href =index.html >Go back</a></p>
+<p align=center><a href ="#top">Go to top</a></p>
 
 </body>
 
