added style to table borders

--- a/wip.html
+++ b/wip.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    <style>
+   
+    </style>
 <title>
     Image Page
 </title>
@@ -17,11 +20,16 @@
 <p>(trying to fit it all in a table)</p>
 <!--<h3 align = center>Primary Directories?</h3>-->
 <br>
-<table>
+<table border="10"  >
 <tr>
 <th>
     Primary Directories?
 </th>
+<th>
+    Highlights?
+</th>
+</tr>
+<tr>
 <td>
   <ul style="color:rgba(0, 0, 0, 0.249);"><i>
     <li><a href ="https://drive.google.com/drive/folders/1oMbT_6PIS8cEnTdRXuue9-KccctiFJZA" target="_blank">Info-Guides</a></li>
@@ -31,17 +39,7 @@
     <br><li><a href ="https://drive.google.com/drive/folders/1hTWa-Z7gV3GaUUMJhT2KPasmq5L1ha3p" target="_blank">Skills Dev Resources</a></li></i>
 </ul>  
 </td>
-
-</tr>
-
-
-
-</table>
-
-
-<br><br><br>
-<h3 align = center> Highlights? </h3>
-<br>
+<td>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
   <li><a href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
   <br><li><a href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
@@ -49,6 +47,18 @@
   <br><li><a href ="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">Curated Book List</a></li>
   <br><li><a href ="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">Programming References</a></li>
 </i></ul>
+
+</td>
+</tr>
+
+
+</table>
+
+
+<br><br><br>
+
+<br>
+
 
 
 
