added table font size

--- a/wip.html
+++ b/wip.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <style>
-   
+   table, th, td {
+  border: 2px solid rgba(31, 106, 168, 0.452);
+  border-radius: 10px;
+}
     </style>
 <title>
     Image Page
@@ -20,7 +23,7 @@
 <p>(trying to fit it all in a table)</p>
 <!--<h3 align = center>Primary Directories?</h3>-->
 <br>
-<table border="10"  >
+<font size="5"><table border="10" font-sze>
 <tr>
 <th>
     Primary Directories?
@@ -52,7 +55,7 @@
 </tr>
 
 
-</table>
+</table></font>
 
 
 <br><br><br>
