--- a/wip.html
+++ b/wip.html
@@ -23,7 +23,7 @@
 <p>(trying to fit it all in a table)</p>
 <!--<h3 align = center>Primary Directories?</h3>-->
 <br>
-<font size="5"><table border="10" font-sze>
+<font size="8"><table border="10" align="center">
 <tr>
 <th>
     Primary Directories?
