changed table orientation

--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
 <!-- Everything from here needs to be links-->
 
 <br>
-<font size="8"><table border="10" align="center">
+<font size="6"><table border="10" align="center" style="width:70%">
   <tr>
   <th>
       Primary Directories?
   </th>
-  <th>
-      Highlights?
-  </th>
+  
   </tr>
   <tr>
   <td>
-    <ul style="color:rgba(0, 0, 0, 0.249);"><i>
-      <li><a href ="https://drive.google.com/drive/folders/1oMbT_6PIS8cEnTdRXuue9-KccctiFJZA" target="_blank">Info-Guides</a></li>
-      <br><li><a href ="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD" target="_blank">UITS Questions</a></li>
-      <br><li><a href ="https://drive.google.com/drive/folders/1n29sfMaCF_S4ffbjudBBSGBd6Q7l3Sqp" target="_blank">Departments</a></li>
-      <br><li><a href ="https://drive.google.com/drive/folders/1htCYkklo4zgP16a3Ailmo6hk9pAi8Psm" target="_blank">Elective Courses</a></li>
-      <br><li><a href ="https://drive.google.com/drive/folders/1hTWa-Z7gV3GaUUMJhT2KPasmq5L1ha3p" target="_blank">Skills Dev Resources</a></li></i>
-  </ul>  
+    <iframe src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL#list" style="width:100%; height:500px; border:20;"></iframe> 
   </td>
+  
+  </tr>
+  <tr>
+    <th>
+      Highlights?
+  </th>
+  
+  </tr>
   <td>
   <ul style="color:rgba(0, 0, 0, 0.249);"><i>
     <li><a href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
@@ -58,16 +58,13 @@
   </i></ul>
   
   </td>
-  </tr>
-  
-  
   </table></font>
 
 <br><br><br><br><br>
 
-<p align = center><i><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</i></a></p>
+<p align = center><i><small><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</a></small></i></p>
 
-<iframe src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL#list" style="width:100%; height:500px; border:0;"></iframe>
+
 <br><br><br>
 <hr>
     <br><br><br>
