--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
      border: 2px solid rgba(31, 106, 168, 0.452);
      border-radius: 10px;
    }
+   
+        .iframe-container {
+            width: 100%;
+            height: 600px; /* Increased height to accommodate zoomed content */
+            overflow: hidden;
+            position: relative;
+        }
+        
+        #drive-frame {
+            width: 100%;
+            height: 100%;
+            border: 0;
+            transform: scale(1.5); /* Constant zoom factor */
+            transform-origin: 0 0; /* Scale from top-left corner */
+        }
+    
        </style>
 <title >
   UITS Online Resources
@@ -29,6 +45,10 @@
 <!-- Everything from here needs to be links-->
 
 <br>
+
+
+
+
 <font size="6"><table border="10" align="center" style="width:70%">
   <tr>
   <th>
@@ -38,7 +58,9 @@
   </tr>
   <tr>
   <td>
-    <iframe src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL#list" style="width:100%; height:500px; border:20;"></iframe> 
+    <div class="iframe-container">
+      <iframe id="drive-frame" src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL#list"></iframe>
+  </div>
   </td>
   
   </tr>
