--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <font size="6"><table border="10" align="center" style="width:80%">
   <tr>
   <th>
-      Primary Directories?
+      Primary Directories?<br>
   </th>
   
   </tr>
@@ -71,7 +71,7 @@
   
   </tr>
   <td>
-  <ul style="color:rgba(0, 0, 0, 0.249);"><i>
+  <ul style="color:rgba(0, 0, 0, 0.249);font-size:22px;"><i>
     <li><a href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">Routine Format</a></li>
@@ -82,9 +82,11 @@
   </td>
   </table></font>
 
+
+<p align = center><i><small><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(Link to the Google Drive)</a></small></i></p>
 <br><br><br><br><br>
 
-<p align = center><i><small><a href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(click here to browse the Google Drive instead)</a></small></i></p>
+
 
 
 <br><br><br>
