--- a/index.html
+++ b/index.html
@@ -109,15 +109,28 @@
 
 <h3 align = center> Socials? </h3>
 <br>
-<ul style="color:rgba(0, 0, 0, 0.249);"><i>
-  <li><a href ="https://discord.gg/weetUpfS5X" target="_blank">Discord Server (Protein Shake)</a></li>
-<br>
-<li><a href ="https://t.me/UITS_ORnU" target="_blank">Telegram Channel (UITS - Online Resources and Updates)</a></li>
-<br><li><a href ="https://facebook.com/groups/1074592960836263/" target="_blank">Facebook Group (UITS - Online Resources) </a></li>
-  <br>
-</i></ul>
+<table align=center> 
+<tr>
+<th>
+  <a href ="https://discord.gg/weetUpfS5X" target="_blank"><img src=discord-logo.png alt="Discord Server (Protein Shake)" width="100" height="100"></a>
 
-<hr><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</th>
+<th>
+  <a href ="https://t.me/UITS_ORnU" target="_blank"><img src=telegram-logo.png alt="Telegram Channel (UITS - Online Resources and Updates)" width="100" height="100"></a>
+
+</th>
+<th>
+  <a href ="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=fb-logo.png alt="Facebook Group (UITS - Online Resources)" width="100" height="100"></a>
+
+</th>
+</tr>
+
+
+</table>
+
+
+
+<br><br><br><br><br><br><br><hr><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <h6 align = center  style="color:rgba(153, 150, 150, 0.993);"><i> (add anon note here)</i> </h6>
 <p align = center>
