fixed telegram logo?

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 </th>
 <th>
-  <a href ="https://t.me/UITS_ORnU" target="_blank"><img src=telegram-logo.png alt="Telegram Channel (UITS - Online Resources and Updates)" width="100" height="100"></a>
+  <a href ="https://t.me/UITS_ORnU" target="_blank"><img src=telegram-logo2.png alt="Telegram Channel (UITS - Online Resources and Updates)" width="100" height="100"></a>
 
 </th>
 <th>
