--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 
-<font size="9"><table border="10" align="center" style="width:80%">
+<table border="10" align="center" style="width:80%">
   <tr>
   <th>
       Primary Directories?<br>
@@ -72,7 +72,7 @@
   </tr>
   <td>
    
-  <ul style="color:rgba(0, 0, 0, 0.249);font-size:22px;">
+  <ul style="color:rgba(0, 0, 0, 0.249);font-size:26px;">
     <li ><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
     <br><li><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
     <br><li><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">Routine Format</a></li>
@@ -81,10 +81,10 @@
   </ul>
   
   </td>
-  </table></font>
+  </table>
 
 
-<p align = center style="font-size:14px;"><i><small><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(Link to the Google Drive)</a></small></i></p>
+<p align = center style="font-size:12px;"><i><small><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(Link to the Google Drive)</a></small></i></p>
 <br><br><br><br><br>
 
 
@@ -95,7 +95,7 @@
     <br><br><br>
 
 <h3 align = center> Similar Projects !!</h3>
-<p align = center><small><i>(for references)</i></small></a></p>
+<p align = center style="font-size:12px;"><small><i>(for references)</i></small></a></p>
 
 <br>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
