--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 
-<table border="10" align="center" style="width:80%">
+<table border="10" align="center" style="font-size="9"; width:80%">
   <tr>
   <th>
       Primary Directories?<br>
