--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 
-<table border="10" align="center" style="font-size="9"; width:80%">
+<font size = "9"><table border="10" align="center" style=" width:80%">
   <tr>
   <th>
       Primary Directories?<br>
@@ -81,7 +81,7 @@
   </ul>
   
   </td>
-  </table>
+  </table></flag>
 
 
 <p align = center style="font-size:12px;"><i><small><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(Link to the Google Drive)</a></small></i></p>
