--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </ul>
   
   </td>
-  </table></flag>
+  </table></font>
 
 
 <p align = center style="font-size:12px;"><i><small><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(Link to the Google Drive)</a></small></i></p>
