--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body style="background-color:rgba(170, 238, 169, 0.233);">
  <br><br><br>
  
-<h1 align = center> UITS Online Resources</h1>
+<font size="11"><h1 align = center> UITS Online Resources</h1></font><br>
 
 <p align = center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the Online Resources thingy. <br>This is just the first action to promote further action towards the same action <br>(kinda crazy to think about).<br>Note that I will be primarily working on <a href ="https://b1tranger.github.io/UITS-Resources/" target="_blank" style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a></small></p><br><br>
 <hr>
