--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <body style="background-color:rgba(170, 238, 169, 0.233);">
  <br><br><br>
  
-<font size="11"><h1 align = center> UITS Online Resources</h1></font><br>
+<font size="11"><p align = center> UITS Online Resources</p></font><br>
 
-<p align = center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the Online Resources thingy. <br>This is just the first action to promote further action towards the same action <br>(kinda crazy to think about).<br>Note that I will be primarily working on <a href ="https://b1tranger.github.io/UITS-Resources/" target="_blank" style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a></small></p><br><br>
+<p align = center style="color:rgba(0, 0, 0, 0.422);font-size:12px"><small>First try on the web version of the Online Resources thingy. <br>This is just the first action to promote further action towards the same action <br>(kinda crazy to think about).<br>Note that I will be primarily working on <a href ="https://b1tranger.github.io/UITS-Resources/" target="_blank" style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a></small></p><br><br>
 <hr>
 <!-- Everything from here needs to be links-->
 
@@ -98,7 +98,7 @@
 <p align = center style="font-size:12px;"><small><i>(for references)</i></small></a></p>
 
 <br>
-<ul style="color:rgba(0, 0, 0, 0.249);"><i>
+<ul style="color:rgba(0, 0, 0, 0.249);font-size:26px;""><i>
   <li><a href ="http://akibreza.github.io/uitsBOT" target="_blank">uitsBOT by Akib Reza (432220005101061)</a></li>
 
 </i></ul>
