--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <br>
 <ul style="color:rgba(0, 0, 0, 0.249);font-size:26px;""><i>
-  <li><a href ="http://akibreza.github.io/uitsBOT" target="_blank">uitsBOT by Akib Reza (432220005101061)</a></li>
+  <li><small><a href ="http://akibreza.github.io/uitsBOT" target="_blank">uitsBOT by Akib Reza (432220005101061)</a></small></li>
 
 </i></ul>
 
