--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 <p align = center style="font-size:12px;"><small><i>(for references)</i></small></a></p>
 
 <br>
-<ul style="color:rgba(0, 0, 0, 0.249);font-size:26px;""><i><small>
+<ul style="color:rgba(0, 0, 0, 0.249);font-size:18px;""><i>
   <li><a href ="http://akibreza.github.io/uitsBOT" target="_blank">uitsBOT by Akib Reza (432220005101061)</a></li>
 
-</i></small></ul>
+</i></ul>
 
 <br><br><br>
 <hr>
