--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         #drive-frame {
             width: 100%;
             height: 100%;
-            border: 0;
-            transform: scale(2); /* Constant zoom factor */
+            border: 10;
+            transform: scale(1.8); /* Constant zoom factor */
             transform-origin: 0 0; /* Scale from top-left corner */
         }
     
@@ -72,7 +72,7 @@
   </tr>
   <td>
    
-  <ul style="color:rgba(0, 0, 0, 0.249);font-size:18px;">
+  <ul style="color:rgba(0, 0, 0, 0.249);font-size:20px;">
     <li ><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
     <br><li><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
     <br><li><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">Routine Format</a></li>
@@ -84,7 +84,7 @@
   </table></font>
 
 
-<p align = center><i><small><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(Link to the Google Drive)</a></small></i></p>
+<p align = center><i><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(Link to the Google Drive)</a></i></p>
 <br><br><br><br><br>
 
 
@@ -95,7 +95,7 @@
     <br><br><br>
 
 <h3 align = center> Similar Projects !!</h3>
-<p align = center"><small><i>(for references)</i></small></a></p>
+<p align = center><small><i>(for references)</i></small></a></p>
 
 <br>
 <ul style="color:rgba(0, 0, 0, 0.249);font-size:14px;""><i>
