--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             height: 100%;
             border: 0;
             transform: scale(1.8); /* Constant zoom factor */
-            transform-origin: 1 1; /* Scale from top-left corner */
+            transform-origin: center; /* Scale from top-left corner */
         }
     
        </style>
