--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
   
   </td>
   </table></font>
+<br>
 
-
-<p align = center><i><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank">(Link to the Google Drive)</a></i></p>
+<p align = center><i><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank"><small>(Link to the Google Drive)</small></a></i></p>
 <br><br><br><br><br>
 
 
