--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 
-<font size = "6"><table border="10" align="center" style=" width:80%">
+<font size = "7"><table border="10" align="center" style=" width:80%">
   <tr>
   <th>
       Primary Directories?<br>
@@ -72,7 +72,7 @@
   </tr>
   <td>
    
-  <ul style="color:rgba(0, 0, 0, 0.249);font-size:22px;">
+  <ul style="color:rgba(0, 0, 0, 0.249);">
     <li ><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
     <br><li><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
     <br><li><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">Routine Format</a></li>
