--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
   </tr>
   <td>
    
-  <ul style="color:rgba(0, 0, 0, 0.249);">
+ <font size="12"> <ul style="color:rgba(0, 0, 0, 0.249);">
     <li ><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
     <br><li><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
     <br><li><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">Routine Format</a></li>
     <br><li><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">Curated Book List</a></li>
     <br><li><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">Programming References</a></li>
-  </ul>
+  </ul></font>
   
   </td>
   </table></font>
