--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ I'll see<!DOCTYPE HTML>
 <font size = "7"><table border="10" align="center" style=" width:80%">
   <tr>
   <th>
-      Primary Directories?<br>
+     <h3> Primary Directories?</h3>
   </th>
   
   </tr>
@@ -66,7 +66,7 @@ I'll see<!DOCTYPE HTML>
   </tr>
   <tr>
     <th>
-      Highlights?
+    <h3>  Highlights? </h3>
   </th>
   
   </tr>
