--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@ I'll see<!DOCTYPE HTML>
 <font size = "7"><table border="10" align="center" style=" width:80%">
   <tr>
   <th>
-     <h3> Primary Directories?</h3>
+     <
+<font size="18"> Primary Directories?</font>
   </th>
   
   </tr>
@@ -66,12 +67,12 @@ I'll see<!DOCTYPE HTML>
   </tr>
   <tr>
     <th>
-    <h3>  Highlights? </h3>
+    <font size="18">  Highlights? </font>
   </th>
   
   </tr>
   <td>
-   
+   <br><br>
  <font size="6"> <ul style="color:rgba(0, 0, 0, 0.249);">
     <li ><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
     <br><li><a style="color:rgba(60, 60, 82, 0.733);" href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
