--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-I'll see<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
   <head>
     <style>
@@ -52,7 +52,7 @@ I'll see<!DOCTYPE HTML>
 <font size = "7"><table border="10" align="center" style=" width:80%">
   <tr>
   <th>
-     <
+     
 <font size="18"> Primary Directories?</font>
   </th>
   
