--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
 
 </th>
 <th>
-  <a href ="https://t.me/UITS_ORnU" target="_blank"><img src=telegram-logo2.png alt="Telegram Channel (UITS - Online Resources and Updates)" width="100" height="100"></a>
+  <a href ="https://t.me/oUITS_ORnU" target="_blank"><img src=telegram-logo2.png alt="Telegram Channel (oUITS - Online Resources and Updates)" width="100" height="100"></a>
 
 </th>
 <th>
-  <a href ="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=fb-logo.png alt="Facebook Group (UITS - Online Resources)" width="100" height="100"></a>
+  <a href ="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=fb-logo.png alt="Facebook Group (oUITS - Online Resources)" width="100" height="100"></a>
 
 </th>
 </tr>
