--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <body style="background-color:rgba(170, 238, 169, 0.233);">
  <br><br><br>
  
-<font size="18"><p align = center><b>UITS Online Resources</b></p></font><br>
+<font size="18"><p align = center><b>oUITS Resources</b></p></font><br>
 
-<p align = center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the Online Resources thingy. <br>This is just the first action to promote further action towards the same action <br>(kinda crazy to think about).<br>Note that I will be primarily working on <a href ="https://b1tranger.github.io/UITS-Resources/" target="_blank" style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a></small></p><br><br>
+<p align = center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the UNOFFICIAL Online Resources for UITS. <br>This is a personal project and just the first action to promote further action towards the same action <br>(kinda crazy to think about).<br>Note that I will be primarily working on <a href ="https://b1tranger.github.io/UITS-Resources/" target="_blank" style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a></small></p><br><br>
 <hr>
 <!-- Everything from here needs to be links-->
 
