--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
       Resources for UITS.<br>Note that I will be primarily working on <a
         href="https://b1tranger.github.io/UITS-Resources/" target="_blank"
         style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a></small></p>
+        
+        <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.119);">go to bottom</a></small></p>
         <br>
         <br>
-  
+
   <!-- Everything from here needs to be links-->
 
   <br>
@@ -127,8 +129,8 @@
   <br>
   <br>
   <br>
-
   <br>
+
   <h3 align=center>Socials? </h3>
   <table align=center>
     <tr>
@@ -253,7 +255,9 @@
     <a href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=drivesdk"
       target="_blank" style="color:rgba(0, 0, 0, 0.519);">Click Here to see note</a><br>
   </p>
-  <br><br>
+  <br>
+  <br>
+  <p id="bottom" align="right"><small><a href="#top" style="color:rgba(0, 0, 0, 0.119);">go to top</a></small></p>
 </body>
 
 </html>
