--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the UNOFFICIAL Online
       Resources for UITS.<br>Note that I will be primarily working on <a
-        href="https://b1tranger.github.io/oUITS-Resources/" target="_blank"
+        href="https://b1tranger.github.io/oUITS-Resources/"
         style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a></small></p>
         
         <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.119);">go to bottom</a></small></p>
