included Similar Projects inside the table

--- a/archive.html
+++ b/archive.html
@@ -19,30 +19,53 @@
 
 
 <br><br>
+
 <hr>
-<p>(trying to fit it all in a table)</p>
-<!--<h3 align = center>Primary Directories?</h3>-->
-<br>
-<font size="8"><table border="10" align="center">
-<tr>
-<th>
-    Primary Directories?
-</th>
-<th>
-    Highlights?
-</th>
+
+<table style="border: 1px solid rgba(31, 106, 168, 0);" align="center">
+  <tr>
+
+    <th style="border: 1px solid rgba(31, 106, 168, 0);" align="center">
+
+      <h3 align=center>Similar Projects ! !</h3>
+
+      <p style="border: 1px solid rgba(31, 106, 168, 0);color:rgba(60, 60, 82, 0.733);""><small>(for references)</small></p>
+</th >
+
 </tr>
 <tr>
-<td>
-  <ul style="color:rgba(0, 0, 0, 0.249);"><i>
+<td style=" border: 1px solid rgba(31, 106, 168, 0);" align="center">
+        <font size="5">
+          <p align=center>
+
+          <ul>
+            <li style="color:rgba(60, 60, 82, 0.733);"><a href=" http://akibreza.github.io/uitsBOT" target="_blank"
+                style="color:rgba(60, 60, 82, 0.733);">uitsBOT by Akib Reza (432220005101061)</a></li>
+
+          </ul>
+      </p>
+      </font>
+      </td>
+
+  </tr>
+
+</table>
+<hr>
+<p>(trying to fit it all in a table)</p>
+<h3 align = center>Primary Directories?</h3>
+<br>
+
+<ul style="color:rgba(0, 0, 0, 0.249);"><i>
     <li><a href ="https://drive.google.com/drive/folders/1oMbT_6PIS8cEnTdRXuue9-KccctiFJZA" target="_blank">Info-Guides</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD" target="_blank">UITS Questions</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/1n29sfMaCF_S4ffbjudBBSGBd6Q7l3Sqp" target="_blank">Departments</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/1htCYkklo4zgP16a3Ailmo6hk9pAi8Psm" target="_blank">Elective Courses</a></li>
     <br><li><a href ="https://drive.google.com/drive/folders/1hTWa-Z7gV3GaUUMJhT2KPasmq5L1ha3p" target="_blank">Skills Dev Resources</a></li></i>
-</ul>  
-</td>
-<td>
+</ul>
+
+<br><br><br>
+<h3 align = center> Highlights? </h3>
+<br>
 <ul style="color:rgba(0, 0, 0, 0.249);"><i>
   <li><a href ="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE Files</a></li>
   <br><li><a href ="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified Library Questions</a></li>
@@ -51,71 +74,16 @@
   <br><li><a href ="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">Programming References</a></li>
 </i></ul>
 
-</td>
-</tr>
-
-
-</table></font>
-
-
-<br><br><br>
-
-<br>
 
 
 
-
-
-
-
-
-
-
-
-
-
-<hr>
-<p align = center> 
-    These are Relative URLs
-</p>
-<a href =temp-page-01.html>Load page 01 (image tag)</a>
-<br><br>
-<a href =temp-page-02.html>Load page 02 (anchor tag)</a>
-<br><br>
-<a href =lorep-ipsum.html>Load Lorem Ipsum</a>
-<br><br>
-<a href =lab3-task-1-UITS.html>Go to Task 1 (Create UITS links)</a>
-<br><br>
-<br><br><br><br>
-  <hr>
-  <p id="URL-1"> (This is an iframe, which unfortunately is not working)</p><br><br>
-  <iframe src="https://drive.google.com/drive/mobile/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL" target="_blank" width=400 height=400 title="Shortcut to UITS Resources"></iframe><br><br>
-   
-<br><br><br><br>
-<hr>
-<div class="sidenav">
-  <a href="#about">About</a>
-  <a href="#services">Services</a>
-  <a href="#clients">Clients</a>
-  <a href="#contact">Contact</a>
-  <button class="dropdown-btn">Dropdown
-    <i class="fa fa-caret-down"></i>
-  </button>
-  <div class="dropdown-container">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div>
-  <a href="#contact">Search</a>
-</div>
-<br><br><br><br>
-
-
-
-<p id="end" align="center">end</p>
-<p align=center><a href =index.html >Go back</a></p>
-<p align=center><a href ="#top">Go to top</a></p>
-
+<ul style="color:rgba(0, 0, 0, 0.249);"><i>
+    <li><a href ="https://discord.gg/weetUpfS5X" target="_blank">Discord Server (Protein Shake)</a></li>
+  <br>
+  <li><a href ="https://t.me/UITS_ORnU" target="_blank">Telegram Channel (UITS - Online Resources and Updates)</a></li>
+  <br><li><a href ="https://facebook.com/groups/1074592960836263/" target="_blank">Facebook Group (UITS - Online Resources) </a></li>
+    <br>
+  </i></ul>
 </body>
 
 </html>
