--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body style="background-color:rgba(170, 238, 169, 0.233);">
   <br>
   <br>
-  
+
 
   <font size="18">
     <p align=center><i>oUITS Resources</i></p>
@@ -45,12 +45,12 @@
 
   <p align=center style="color:rgba(0, 0, 0, 0.422);"><small>First try on the web version of the UNOFFICIAL Online
       Resources for UITS.<br>Note that I will be primarily working on <a
-        href="https://b1tranger.github.io/oUITS-Resources/"
-        style="color:rgba(4, 0, 128, 0.806);">GitHub's Hosting</a></small></p>
-        
-        <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.119);">go to bottom</a></small></p>
-        <br>
-        <br>
+        href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);">GitHub's
+        Hosting</a></small></p>
+
+  <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.119);">go to bottom</a></small></p>
+  <br>
+  <br>
 
   <!-- Everything from here needs to be links-->
 
@@ -83,33 +83,60 @@
         </th>
 
       </tr>
-      <td>
-        <br>
-        <font size="5">
-          <ul style="color:rgba(0, 0, 0, 0.249);">
-            <li><a style="color:rgba(60, 60, 82, 0.733);"
-                href="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE
-                Files</a></li>
-            <br>
-            <li><a style="color:rgba(60, 60, 82, 0.733);"
-                href="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">Modified
-                Library Questions</a></li>
-            <br>
-            <li><a style="color:rgba(60, 60, 82, 0.733);"
-                href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">Routine
-                Format</a></li>
-            <br>
-            <li><a style="color:rgba(60, 60, 82, 0.733);"
-                href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">Curated
-                Book List</a></li>
-            <br>
-            <li><a style="color:rgba(60, 60, 82, 0.733);"
-                href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt"
-                target="_blank">Programming References</a></li>
-          </ul>
-        </font>
-        <br>
-      </td>
+      <tr>
+        <td>
+          <br>
+          <font size="5">
+            <ul style="color:rgba(0, 0, 0, 0.249);">
+              <li><a style="color:rgba(60, 60, 82, 0.733);"
+                  href="https://drive.google.com/drive/folders/1rVrADxgpbuEPC5miD7_gP3fGKTMkRfoC" target="_blank">CSE
+                  Files</a></li>
+              <br>
+              <li><a style="color:rgba(60, 60, 82, 0.733);"
+                  href="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU"
+                  target="_blank">Modified
+                  Library Questions</a></li>
+              <br>
+              <li><a style="color:rgba(60, 60, 82, 0.733);"
+                  href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1"
+                  target="_blank">Routine
+                  Format</a></li>
+              <br>
+              <li><a style="color:rgba(60, 60, 82, 0.733);"
+                  href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa"
+                  target="_blank">Curated
+                  Book List</a></li>
+              <br>
+              <li><a style="color:rgba(60, 60, 82, 0.733);"
+                  href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt"
+                  target="_blank">Programming References</a></li>
+            </ul>
+          </font>
+          <br>
+        </td>
+      </tr>
+      <tr>
+        <th>
+
+          <font size="5">Similar Projects ! !</font>
+          <br>
+          <font size="3"><small style="color:rgba(60, 60, 82, 0.733);">(for references)</small></font>
+        </th>
+
+      </tr>
+      <tr>
+        <td>
+          <font size="5">
+            <ul>
+              <li style="color:rgba(60, 60, 82, 0.733);"><a href=" http://akibreza.github.io/uitsBOT" target="_blank"
+                  style="color:rgba(60, 60, 82, 0.733);">uitsBOT by Akib Reza (0432220005101061)</a></li>
+
+            </ul>
+
+          </font>
+        </td>
+
+      </tr>
     </table>
   </font>
 
@@ -144,7 +171,7 @@
   </table>
 
 
- 
+
 
   <br>
   <br>
@@ -154,34 +181,6 @@
   border-radius: 0px;" align="center"-->
 
 
-  <table style="border: 1px solid rgba(31, 106, 168, 0);" align="center">
-    <tr>
-
-      <th style="border: 1px solid rgba(31, 106, 168, 0);" align="center">
-        <font size="5">
-          <p align=center></p>Similar Projects ! !</p>
-        </font>
-        <p style="border: 1px solid rgba(31, 106, 168, 0);color:rgba(60, 60, 82, 0.733);""><small>(for references)</small></p>
-</th >
-
-</tr>
- <tr>
-  <td style=" border: 1px solid rgba(31, 106, 168, 0);" align="center">
-          <font size="5">
-            <p align=center>
-
-            <ul>
-              <li style="color:rgba(60, 60, 82, 0.733);"><a href=" http://akibreza.github.io/uitsBOT" target="_blank"
-                  style="color:rgba(60, 60, 82, 0.733);">uitsBOT by Akib Reza (432220005101061)</a></li>
-
-            </ul>
-        </p>
-        </font>
-        </td>
-
-    </tr>
-
-  </table>
 
   <br>
   <br>
@@ -206,7 +205,7 @@
   <br>
   <br>
   <br>
- 
+
   <hr>
 
   <br>
